<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background_3"
    tools:context=".QuienesSomos">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="@color/gray_dnow"
        app:expandedTitleMarginStart="15dp"
        app:expandedTitleMarginBottom="20dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cb01"
            app:layout_collapseMode="parallax" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/about"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb01_text"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb01_2_text"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="11sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb01_3_text"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

